--- a/style.css
+++ b/style.css
@@ -22,6 +22,62 @@ body {
   font-family: var(--font3);
 }
 
+.modal-backdrop {
+  position: absolute;
+  display: none;
+  width: 100%;
+  z-index: 3;
+  height: 100%;
+  background: rgb(36, 41, 47, 0.7);
+}
+.modal-overlay {
+  position: absolute;
+  display: none;
+  width: 300px;
+  border-radius: 20px;
+  background: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  margin: auto auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 4;
+  height: 50%;
+  transition: all 300sm ease;
+}
+.modal-overlay div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  flex-direction: column;
+  overflow: hidden;
+}
+.modal-overlay .succesful {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-overlay .succesful img {
+  display: flex;
+  background-position: center;
+  width: 300px;
+  height: 200px;
+  margin-bottom: 10px;
+}
+.modal-overlay div button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  transition: all 200ms ease;
+}
 .header {
   background-color: var(--mainColor);
   margin: 0;
