--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 10px;
 }
 .modal-overlay .succesful img {
   display: flex;
@@ -70,13 +71,49 @@ body {
   height: 200px;
   margin-bottom: 10px;
 }
+.modal-overlay .btn-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
 .modal-overlay div button {
   display: flex;
+  width: 100px;
+  background: rgb(60, 56, 88);
   flex-direction: row;
+  font-weight: 600;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
   transition: all 200ms ease;
+}
+.page-loader {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  background: white;
+  z-index: 10;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  transition: all 2s ease-in;
+  animation-name: loader;
+}
+@keyframes loader {
+  70% {
+    opacity: 0.8;
+    transition: all 300ms;
+  }
+  90% {
+    opacity: 0.9;
+    transition: all 300ms;
+  }
+}
+.page-loader img {
+  width: 10%;
+  height: 20%;
+}
+.modal-overlay div button :hover {
 }
 .header {
   background-color: var(--mainColor);
@@ -161,8 +198,18 @@ span {
   width: 100%;
   max-width: 100%;
   height: 100%;
+  top: 20px;
   max-height: 100%;
+  animation: phone;
+  animation-duration: 5s;
+  animation-fill-mode: forwards;
   position: relative;
+}
+
+@keyframes phone {
+  100% {
+    transform: translateY(-15%);
+  }
 }
 
 .form-container {
