--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html, body {
   padding: 0;
   margin: 0;
   font-family: var(--font3);
+  font-size: 16px;
 }
 
 .header {
@@ -29,6 +30,7 @@ html, body {
   box-sizing: border-box;
   width: 100%;
   position: absolute;
+  overflow-x: hidden;
 }
 
 nav {
@@ -131,24 +133,24 @@ font-size: 14px;
   position: relative;
   padding: 10px;
   box-sizing: border-box;
-/*     border: 2px solid red; */
+
+  /* border: 2px solid red; */
 }
   
 
 form {
-  width: 90%;
-  max-width: 90%;
+  width: 95%;
+  max-width: 95%;
   height: 90%;
   max-height: 90;
-  margin-left:30px;
-/*   border: 2px solid black; */
+  margin:5px 10px;
+  /* border: 2px solid black; */
    position: relative;
 padding: 15px 0;
- 
+margin-left: 30px;
 }
 
 label {
-  margin-left: 20px;
   color: var(--mainColor);
   font-family: var(--font2);
 }
@@ -167,16 +169,18 @@ input:hover {
 input, button {
   width: 90%;
   max-width: 90%;
-  margin: 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 button {
   background: var(--mainColor);
-  padding: 10px;
+  padding: .6em;
   border: transparent; 
   border-radius: 10px;
   color: var(--white);
   font-size: 20px;
+  margin-top: 25px;
 }
 
 button:hover {
@@ -189,8 +193,57 @@ button:hover {
 p {
   text-align: center;
   font-size: 12px;
+  margin-left: -25px;
 }
 
 p a{
   text-decoration: none;
+}
+
+@media screen and (max-width: 600px) {
+ .phone-container  {
+  display: none;
+ }
+
+ .form-container {
+  width: 90%;
+  height: 100%;
+  position: relative;
+/*   background: var(--bgColor); */
+}
+
+.main-container {
+    width: 85%;
+    height: 600px;
+    top: 50%;
+    left: 40%;
+    transform: translate(-30%, -50%);
+    position: absolute;
+  }
+
+  form {
+    margin-left:15px;
+  }
+  input, label, button {
+    margin-left: 0;
+  }
+
+  input {
+    padding: .8em 0;
+    border-radius: 5px;
+  }
+  button {
+    padding: .7em 0;
+    margin-top: 15px;
+  }
+
+input, button {
+  width: 95%;
+  max-width: 99%;
+}
+
+  p {
+    /* border: 1px solid red; */
+    margin-left: -22px;
+  }
 }
