--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@
   --font3: "Poppins", sans-serif;
 }
 
+* {
+  box-sizing: border-box !important;
+}
 html,
 body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: var(--font3);
@@ -113,16 +115,81 @@ body {
   width: 10%;
   height: 20%;
 }
-.modal-overlay div button :hover {
-}
+
 .header {
   background-color: var(--mainColor);
   margin: 0;
   box-sizing: border-box;
   width: 100%;
-  position: absolute;
+  position: relative;
+  transition: all 300ms ease-in-out;
 }
 
+/* Mobile menu */
+.header .side-bar {
+  display: flex;
+  transition: all 1s ease-in-out;
+  position: absolute;
+  transform: translateX(-100%);
+  background: var(--mainColor);
+  width: 100vw;
+  overflow-x: hidden;
+  height: 100vh;
+  z-index: 2;
+  align-items: flex-start;
+  justify-content: flex-start;
+  top: 0;
+}
+.header .side-bar .bar-wrapper {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.header .side-bar ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  width: 100%;
+  justify-content: flex-start;
+  gap: 20px;
+}
+.header .side-bar ul .close-menu {
+  display: flex;
+  justify-content: flex-end;
+  font-weight: 700;
+  cursor: pointer;
+}
+.desktop-theme .desktop-dark span {
+  display: flex;
+  background: rgb(36, 41, 46);
+  color: white;
+}
+.desktop-theme .desktop-light {
+  display: none;
+  background: rgb(36, 41, 46);
+  color: white;
+}
+.desktop-theme .desktop-dark {
+  display: flex;
+  background: black;
+}
+.header .side-bar ul .close span {
+  font-weight: 700;
+  color: white;
+  font-size: 24px;
+}
+.header .side-bar ul li {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  cursor: pointer;
+}
+.header .side-bar ul li {
+  display: flex;
+  justify-content: flex-start;
+  justify-content: flex-start;
+}
 nav {
   display: flex;
   justify-content: space-between;
@@ -143,10 +210,45 @@ span {
 }
 
 .nav-links {
+  display: flex;
+  justify-content: flex-end;
   text-align: right;
+  align-items: center;
   flex: 1;
 }
+.nav-links ul {
+  display: flex;
+  color: white;
+}
 
+.nav-links ul span {
+  display: none;
+}
+.nav-links li {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-links .theme {
+  align-items: center;
+  justify-content: space-between;
+}
+.nav-links .theme span {
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.nav-links .theme .dark span {
+  display: flex;
+  color: black;
+  cursor: pointer;
+}
+.nav-links .theme .light span {
+  display: none;
+  color: white;
+  cursor: pointer;
+}
 .nav-links ul li {
   list-style: none;
   display: inline-block;
@@ -312,4 +414,101 @@ p {
 
 p a {
   text-decoration: none;
+}
+
+/* Device = Most of the Smartphones Mobiles (Portrait) */
+@media (min-width: 320px) and (max-width: 480px) {
+  .nav-links ul .link {
+    display: none;
+  }
+  .nav-links ul span {
+    display: flex;
+    width: auto;
+    background: rgb(255, 255, 255, 0.8);
+    padding: 10px;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+  }
+  .page-loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -30%;
+  }
+  .page-loader img {
+    width: 28%;
+    height: 13%;
+  }
+
+  /* Main container */
+  .main-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    top: 45%;
+    margin: 0 auto;
+  }
+
+  .phone-container {
+    display: none;
+    height: 100%;
+    position: relative;
+  }
+
+  .form-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    height: 100%;
+    position: relative;
+    /*   background: var(--bgColor); */
+  }
+
+  .mini-container {
+    width: 90%;
+    max-width: 90%;
+    height: 95%;
+    max-height: 95%;
+    margin-top: 10px;
+    background: var(--bgColor);
+    border-radius: 20px;
+    position: relative;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+
+  form {
+    width: 100%;
+    max-width: 90%;
+    margin-left: 30px;
+    position: relative;
+    padding: 15px 0;
+  }
+
+  label {
+    margin-left: 20px;
+    color: var(--mainColor);
+    font-family: var(--font2);
+  }
+
+  input {
+    padding: 5px 2px;
+    border: transparent;
+    border-radius: 5px;
+  }
+  #number {
+    display: flex;
+    width: 75%;
+  }
+  .header {
+    width: 100vw;
+    margin: 0;
+  }
+  .modal-overlay {
+  }
 }
